Fixed dropdown z-index

--- a/app/assets/stylesheets/partials/_buttons.sass
+++ b/app/assets/stylesheets/partials/_buttons.sass
@@ -63,7 +63,7 @@
     position: absolute
     right: 1px
     top: 40px
-    z-index: 2
+    z-index: 1
     > li
       width: 100%
   a
